# NSU_SLM_SecureFineTune

./: .gitignore  Dissertation_Proposal_Presentation_Castro_Puello.pptx  GenerateResponses_MiniCPM_Consolidated.py  GenerateResponses_MultiModel.py  MiniCPM-1B-sft-bf16_Toxic_Tokens.tsv  MiniCPM-1B-sft-bf16_Toxic_Tokens.txt  MiniCPM-1B-sft-bf16_Toxic_Tokens_2.tsv  SLM Jailbreak Defender Framework.docx  StableLM-2-Zephyr-1.6B_Toxic_Tokens.tsv  StableLM-2-Zephyr-1.6B_Toxic_Tokens.txt  StableLM-2-Zephyr-1.6B_Toxic_Tokens_2.tsv  Timeline and Milestones.docx  TinyLlama.ipynb  TinyLlamaSecureFineTune.ipynb  Tinyllama_tuning.ipynb  TrainModels_Parallel.py  Zoo of JailBreaks.pptx  jailbreaktestingdandataset.ipynb  pyproject.toml  run_all_methods.py
Guardrail SLM Training Dataset preparation/: Guardrail SLM Training Dataset preparation.ipynb  Guardrail_dataset.jsonl  readme.md
JQueryTrainingDataset/: Dataset Curation & Preprocessing.ipynb  readme.md  training_jquery.jsonl
JavaScriptModelTraining/: Dataset Curation & Preprocessing.ipynb  JavaScriptLibraryDataset.jsonl  JavaScriptLibraryDataset_with_responses.jsonl  JavaScriptModelTraining.ipynb  readme.md  tinyLlama_0_normal.json
Output_FT_OOB_scored/: AdditionToTriningDataset8.jsonl  Castro_Puello_Eduardo_Dissertation_Proposal.docx  EvaluationDataset5.jsonl  EvaluationDataset8.jsonl  EvaluationDataset9.jsonl  FTvsOOB (version 1).xlsx  FTvsOOB.xlsx  FTvsOOB_2.xlsx  Fox-1-1.6B-Instruct-v0.1_scored.jsonl  GenerateResponses_MiniCPM.py  H2O-Danube-1.8B-SFT_scored.jsonl  OLMo-7B-Instruct-hf_scored.jsonl  Score_outputs.ipynb  (+44 more)
(+6703 files in other folders)
